Начальная реализация бизнес логики
На данный момент для запуска того что сейчас есть, нужно в файле SessionService закоментить все строки так как его зависимости ещё не реализованны.

--- a/GameSessionManager/GameSessionManager/App.xaml
+++ b/GameSessionManager/GameSessionManager/App.xaml
@@ -1,9 +1,7 @@
 ﻿<Application x:Class="GameSessionManager.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:GameSessionManager"
-             StartupUri="MainWindow.xaml">
+             xmlns:local="clr-namespace:GameSessionManager">
     <Application.Resources>
-         
     </Application.Resources>
 </Application>
