--- a/GameSessionManager/GameSessionManager/App.xaml
+++ b/GameSessionManager/GameSessionManager/App.xaml
@@ -3,5 +3,11 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:GameSessionManager">
     <Application.Resources>
+        <ResourceDictionary>
+            <ResourceDictionary.MergedDictionaries>
+                <ResourceDictionary Source="dark.xaml"/>
+                <ResourceDictionary Source="light.xaml"/>
+            </ResourceDictionary.MergedDictionaries>
+        </ResourceDictionary>
     </Application.Resources>
 </Application>
